kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rust-server
  labels:
    app: rust-server
    name: rust-servee
