kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rust-server
  namespace: rust-server
  labels:
    app: rust-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rust-server
  template:
    metadata:
      labels:
        app: rust-server
    spec:
      containers:
        - name: rust-server
          image: localhost/kube-rust-server:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
