kubernetes/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rust-server-service
spec:
  selector:
    app: rust-server
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
  # to know the assigned port
  # export NODE_PORT=$(kubectl get -o jsonpath="{.spec.ports[0].nodePort}" services rust-server-service)
