kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rust-server-service
  namespace: rust-server
spec:
  selector:
    app: rust-server
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
  # Using externalIPs to expose the service on a specific IP
  externalIPs:
    - 192.168.31.121
